--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         <div id="result" class="mt-3"></div>
     </div>
    <script type="text/javascript">
-        const apiUrl = "{{ api_url }}/api/user
+        const apiUrl = "{{ api_url }}/api/user";
     </script>
     <script src="/static/js/script.js"></script>
 </body>
